--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,7 @@
 name: Publish VS Code Theme
 on:
   push:
-    tags:
-      - "v*" # triggers only on tags like v1.0.0, v2.1.3, etc.
+    tags: ["v*.*.*"] # triggers only on tags like v1.0.0, v2.1.3, etc.
 
 jobs:
   publish:
