--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,8 @@ on:
   push:
     tags: ["v*.*.*"] # triggers only on tags like v1.0.0, v2.1.3, etc.
 
+  workflow_dispatch:
+
 jobs:
   publish:
     runs-on: ubuntu-latest
