--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: Publish VS Code Theme
-on:
-  push:
-    tags: ["v*.*.*"] # triggers only on tags like v1.0.0, v2.1.3, etc.
 
+on:
+  release:
+    types: [published]
   workflow_dispatch:
 
 jobs:
@@ -10,10 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - uses: pnpm/action-setup@v4
         with:
-          version: 9
+          version: 10
 
       - name: Install @vscode/vsce
         run: pnpm add -g @vscode/vsce
@@ -22,4 +24,6 @@ jobs:
         run: echo "Publishing version $(jq -r .version package.json)"
 
       - name: Publish to VS Code Marketplace
-        run: pnpm exec vsce publish -p ${{ secrets.VSCE_TOKEN }}
+        env:
+          VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
+        run: pnpm exec vsce publish -p "$VSCE_TOKEN"
